# cash_tg_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  table.md
bot/: __init__.py  tg_bot.py
configs/: bot_settings.yaml
core/: models.py  settings.py
db/: __init__.py  create_tables.py  engine.py  queries.py
